<resources>
    <string name="app_name">Akhil-SystemTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_one_user_from_the_list">Select One User From The List</string>
    <string name="error">Error</string>
    <string name="val_error">Validation Error</string>
    <string name="provide_valid_cred">Please provide valid email/password</string>
    <string name="email">Email</string>
    <string name="email_key">eve.holt@reqres.in</string>
    <string name="_91">+91</string>
    <string name="password">Password</string>
    <string name="pass_key">cityslicka</string>
    <string name="log_in">Log in</string>
    <string name="users_list">Users List</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="logo">Logo</string>
    <string name="enter_here">Enter here</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>