<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg_2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/rounded_stroke"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:textColorHint="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@null"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="15dp"
            android:drawableTint="#ffffff"
            android:gravity="center_vertical"
            android:text="@string/email_key"
            android:hint="@string/email"
            android:padding="5dp"
            android:id="@+id/email"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/phoneHolder"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toLeftOf="@+id/phoneHolder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/phoneHolder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/_91"
            android:textColor="#e0e0e0"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/otpLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_stroke"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/phoneLayout"
        app:layout_constraintStart_toStartOf="@+id/phoneLayout"
        app:layout_constraintTop_toBottomOf="@+id/phoneLayout"
        app:layout_constraintVertical_bias="0.029999971">

        <EditText
            android:textColorHint="@android:color/white"
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@null"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="15dp"
            android:drawableTint="#ffffff"
            android:gravity="center_vertical"
            android:text="@string/pass_key"
            android:hint="@string/password"
            android:padding="5dp"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:inputType="textPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_solid2"
        android:text="@string/log_in"
        android:fontFamily="sans-serif-light"
        android:textColor="#070707"
        android:textSize="@dimen/_18sdp"
        android:padding="@dimen/_6sdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/otpLayout"
        app:layout_constraintStart_toStartOf="@+id/otpLayout"
        app:layout_constraintTop_toBottomOf="@+id/otpLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/users_list"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneLayout"
        app:layout_constraintStart_toStartOf="@+id/phoneLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textColor="#bdbdbd"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneLayout"
        app:layout_constraintEnd_toEndOf="@+id/phoneLayout"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="@+id/phoneLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>